force-app/main/default/objects/Case/fields/Case_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Type__c</fullName>
    <label>Başvuru Nedeni L2</label>
    <type>Lookup</type>
    <referenceTo>Parameter__c</referenceTo>
    <relationshipLabel>Case Reason Type Cases</relationshipLabel>
    <relationshipName>Case_Reason_Type_Cases</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>