force-app/main/default/objects/Case/fields/Case_Reason_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Type_Detail__c</fullName>
    <label>Başvuru Nedeni L3</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Parameter__c</referenceTo>
    <relationshipLabel>Case Reason Type Detail Cases</relationshipLabel>
    <relationshipName>Case_Reason_Type_Detail_Cases</relationshipName>
</CustomField>