force-app/main/default/objects/Case/fields/Channel_Management__c.field-meta.xml
<CustomField>
    <fullName>Channel_Management__c</fullName>
    <label>Kanal Yönetimi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>OtoKoç</fullName>
            </value>
            <value>
                <fullName>TOFAŞ</fullName>
            </value>
            <value>
                <fullName>Arçelik</fullName>
            </value>
            <value>
                <fullName>WAT Mobilite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>