force-app/main/default/objects/Case/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Kapanış Nedeni</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ulaşılamadı</fullName>
            </value>
            <value>
                <fullName>Sorun Düzeldi</fullName>
            </value>
            <value>
                <fullName>Müşteri Vazgeçti</fullName>
            </value>
            <value>
                <fullName>Diğer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>