force-app/main/default/objects/Case/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Satış Yapılan Bayi</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Cases</relationshipLabel>
    <relationshipName>Dealer_Cases</relationshipName>
</CustomField>