force-app/main/default/objects/Case/fields/Is_Critical__c.field-meta.xml
<CustomField>
    <fullName>Is_Critical__c</fullName>
    <label>Kritik</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>