force-app/main/default/objects/Case/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <label>İlgili Ürün</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Product Cases</relationshipLabel>
    <relationshipName>Related_Product_Cases</relationshipName>
</CustomField>