force-app/main/default/objects/Case/fields/Related_Station__c.field-meta.xml
<CustomField>
    <fullName>Related_Station__c</fullName>
    <label>İlgili İstasyon</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Station Cases</relationshipLabel>
    <relationshipName>Related_Station_Cases</relationshipName>
</CustomField>