force-app/main/default/objects/Case/fields/Related_Station_Unit__c.field-meta.xml
<CustomField>
    <fullName>Related_Station_Unit__c</fullName>
    <label>İlgili Ünite</label>
    <type>Lookup</type>
    <referenceTo>Station_Unit__c</referenceTo>
    <relationshipLabel>Related Unit Cases</relationshipLabel>
    <relationshipName>Related_Unit_Cases</relationshipName>
</CustomField>