force-app/main/default/objects/Case/fields/Vehicle_Brand_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand_Model__c</fullName>
    <label>Araç Marka Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Renault</fullName>
            </value>
            <value>
                <fullName>Togg</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
            <value>
                <fullName>BYD</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Mercedes</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Volvo</fullName>
            </value>
            <value>
                <fullName>Peugeot</fullName>
            </value>
            <value>
                <fullName>Citroen</fullName>
            </value>
            <value>
                <fullName>Fiat</fullName>
            </value>
            <value>
                <fullName>Cupra</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>Diğer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>