force-app/main/default/objects/Case/recordTypes/Ariza.recordType-meta.xml
<RecordType>
    <fullName>Ariza</fullName>
    <active>true</active>
    <label>Arıza</label>
</RecordType>