force-app/main/default/objects/Case/recordTypes/Musteri_Onerisi.recordType-meta.xml
<RecordType>
    <fullName>Musteri_Onerisi</fullName>
    <active>true</active>
    <label>Müşteri Önerisi</label>
    <businessProcess>WAT_Case_Process</businessProcess>
</RecordType>