force-app/main/default/objects/Case/recordTypes/Sikayet.recordType-meta.xml
<RecordType>
    <fullName>Sikayet</fullName>
    <active>true</active>
    <label>Şikayet</label>
    <businessProcess>WAT_Case_Process</businessProcess>
</RecordType>