force-app/main/default/objects/Case/recordTypes/Tesekkur.recordType-meta.xml
<RecordType>
    <fullName>Tesekkur</fullName>
    <active>true</active>
    <label>Teşekkür</label>
    <businessProcess>WAT_Case_Process</businessProcess>
</RecordType>