force-app/main/default/objects/Case/validationRules/FLS_Eligibility_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>FLS_Eligibility_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, 'FLS'), Is_FLS_Eligible__c = FALSE, NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>Bu başvuru nedeni FLS atamasına uygun değildir</errorMessage>
</ValidationRule>