force-app/main/default/objects/Case/validationRules/Require_Close_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Close_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, 'Closed'), ISPICKVAL(Close_Reason__c, ''))</errorConditionFormula>
    <errorMessage>Kapanış nedeni zorunludur</errorMessage>
</ValidationRule>