force-app/main/default/objects/Case/validationRules/Service_Eligibility_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Eligibility_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, 'Service'), Is_Service_Eligible__c = FALSE, NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>Bu başvuru nedeni servise atamaya uygun değildir</errorMessage>
</ValidationRule>